# snake-console

./: CMakeLists.txt  README.md  board.h
src/: board.h  console-utils.h  fruit.h  game.h  main.cpp  matrix.h  point.h  random.h  snake.h  string-utils.h  timer.h
